# pyScoreParser

./: .gitignore  __init__.py  data_class.py  data_for_training.py  feature_extraction.py  feature_utils.py  generate_midi.py  readme.md  setup.cfg  setup.py  test_code.py  utils.py  xml_direction_encoding.py  xml_matching.py  xml_midi_matching.py  xml_utils.py
__MACOSX/: ._AlignmentTool
__MACOSX/AlignmentTool/: ._Code  ._LICENCE.txt  ._MIDIToMIDIAlign.sh  ._MusicXMLToMIDIAlign.sh  ._compile.sh  ._ex_align1.mid  ._ex_align2.mid  ._ex_ref.musx  ._ex_ref.xml
__MACOSX/AlignmentTool/Code/: ._BasicCalculation_v170122.hpp  ._BasicPitchCalculation_v170101.hpp  ._ErrorDetection_v190702.cpp  ._Fmt1x_v170108_2.hpp  ._Fmt2_v170104.hpp  ._Fmt3xToHmm_v170225.cpp  ._Fmt3x_v170225.hpp  ._HandSeparationData_MergedOututHMM_v161230.hpp  ._HandSeparationForPR_v170304.hpp  ._Hmm_v170225.hpp  ._Hom_v170104.hpp  ._MatchToCorresp_v170918.cpp  ._Midi_v170101.hpp  ._MusicXMLToFmt3x_v170104.cpp  ._MusicXMLToHMM_v170104.cpp  ._PianoRoll_v170503.hpp  ._RealignmentMOHMM_v170427.cpp  ._RealignmentMOHMM_v170427.hpp  ._ScoreFollower_v170503.hpp  ._ScorePerfmMatch_v170503.hpp  ._ScorePerfmMatcher_v170101_2.cpp  (+2 more)
midi_utils/: midi_utils.py  visualize_utils.py
musicxml_parser/mxp/: main.py
src/pyScoreParser/: __init__.py  beat_measure_number_test.py  config.yml  data_class.py  feature_extraction.py  xml_matching.py  xml_midi_matching.py  xml_utils.py  xml_utils_new.py
src/pyScoreParser.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test_examples/: test_code.py  test_piece_data.py
(+1 files in other folders)
