[metadata]
name = pyScoreParser
version = 0.0.1
author = Dasaem Jeong, Taegyun Kwon 
author_email = jdasam@gmail.com, ilcobo2@gmail.com
description = performance midi - musicxml alignment data management tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jdasam/pyScoreParser
project_urls =
    Bug Tracker = https://github.com/jdasam/pyScoreParser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
